--- a/package.json
+++ b/package.json
@@ -21,28 +21,28 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "autoprefixer": "^10.4.16",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.39.2",
     "mysql2": "^3.11.3",
     "next": "^14.2.3",
     "next-themes": "^0.4.6",
-    "postcss": "^8.5.6",
     "prettier": "^3.3.3",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^15.5.0",
-    "tailwindcss": "^3.4.18",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "bun-types": "^1.1.29",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.30.3",
     "eslint-config-next": "14.2.15",
-    "postgres": "^3.4.4"
+    "postcss": "^8.5.6",
+    "postgres": "^3.4.4",
+    "tailwindcss": "^3.4.18"
   },
   "engines": {
     "node": ">=18"
