--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-syntax-highlighter": "^15.5.11",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.39.2",
+    "lint": "^0.8.19",
     "mysql2": "^3.11.3",
     "next": "^14.2.3",
     "next-themes": "^0.4.6",
@@ -39,6 +40,7 @@
     "bun-types": "^1.1.29",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.30.3",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
     "postcss": "^8.5.6",
     "postgres": "^3.4.4",
